<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFilmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MovieCatalogue">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="@string/detail_title">

            <ImageView
                android:id="@+id/tv_detail_imgBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:contentDescription="@string/image_poster_film"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/backdrop_avengers" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bc_cardView"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/tv_detail_imgPoster"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_poster_film"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/poster_infinity_war" />

            <TextView
                android:id="@+id/tv_detail_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nexademolight"
                android:textColor="@color/color_rating"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_imgPoster"
                tools:text="110 minutes" />

            <TextView
                android:id="@+id/tv_detail_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:width="0dp"
                android:fontFamily="@font/nexademolight"
                android:lineSpacingMultiplier="1.5"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre"
                tools:text="@string/detail_desc" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/nexademolight"
                android:padding="6dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/ic_date"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/detail_release_date" />

            <ImageView
                android:id="@+id/ic_date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/iv_rating"
                android:src="@drawable/ic_date"
                android:theme="@style/Widget.AppCompat.RatingBar"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_imgPoster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nexademolight"
                android:padding="6dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/rb_score"
                app:layout_constraintTop_toTopOf="@+id/rb_score"
                tools:text="@string/detail_score" />

            <ImageView
                android:id="@+id/rb_score"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/iv_rating"
                android:src="@drawable/ic_rating"
                android:theme="@style/Widget.AppCompat.RatingBar"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_imgPoster"
                app:layout_constraintTop_toBottomOf="@+id/ic_date" />

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nexademolight"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_runtime"
                tools:text="@string/detail_genre" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/color_rating"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/fab"
        android:src="@drawable/ic_favorite_filled"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="end|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>








