<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_movie"
        android:title="@string/bn_movie"
        android:icon="@drawable/ic_movie"
        />

    <item android:id="@+id/menu_tv_show"
        android:title="@string/bn_tv_show"
        android:icon="@drawable/ic_tv_show"
        />

    <item android:id="@+id/menu_favorite"
        android:title="@string/bn_favorite"
        android:icon="@drawable/ic_favorite_filled"
        />
</menu>